[package]
name = "tower-defiance-experiment "
version = "0.2.0"
authors = ["Jacob Riesen"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
lexical = "^5.1"
amethyst = {version = "0.15.2", features = ["no-slow-safety-checks","tiles"]}
log = { version = "0.4.8", features = ["serde"] }

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
