[package]
name = "tower-defiance-experiment "
version = "0.2.0"
authors = ["Jacob Riesen"]
edition = "2018"

[dependencies]
structopt = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
amethyst = {version = "0.15.3", features = ["no-slow-safety-checks","tiles"]}
log = { version = "0.4.8", features = ["serde"] }
specs-derive = "0.4.1"
[dependencies.lexical-core]
#optional = true
version = ">= 0.6, < 0.8"

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

